--- a/package/electra1131_1.0.3.plist
+++ b/package/electra1131_1.0.3.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>https://zerodayios.github.io/package/electra1131.ipa</string>
+                   <string>https://zerodayios.github.io/package/electra1131_1.0.3.ipa</string>
                </dict>
 				<dict>
 					<key>kind</key>
@@ -38,9 +38,9 @@
                <key>kind</key>
                <string>software</string>
                <key>subtitle</key>
-               <string>Electra1131VFS</string>
+               <string>Electra1131-VFS</string>
                <key>title</key>
-               <string>Electra1131VFS</string>
+               <string>Electra1131-VFS</string>
            </dict>
        </dict>
    </array>
